# matchconsult

./: .gitignore  ARCHITECTURE_ET_DEPLOIEMENT.md  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .env.example  main.py  pyproject.toml  start.ps1
backend/app/: config.py  models.py
backend/app/routes/: mission.py
backend/app/services/: claude_service.py  cv_parser.py  demo_service.py  embeddings.py  matcher.py
backend/data/: consultants_meta.json
frontend/: index.html  package-lock.json  package.json  start.ps1
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ConsultantCard.tsx  MissionInput.tsx  NavBar.tsx  ResultsPage.tsx  RewrittenOffer.tsx  StepIndicator.tsx
frontend/src/styles/: ods.css
frontend/src/types/: index.ts
