[project]
name = "matchconsult"
version = "0.1.0"
description = "AI-powered consultant matching for ESN"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-dotenv==1.0.1",
    "anthropic==0.40.0",
    "groq==0.11.0",
    "sentence-transformers==3.3.1",
    "jinja2>=3.1.0",
    "numpy==1.26.4",
    "pdfplumber==0.11.4",
    "python-docx==1.1.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-multipart==0.0.12",
    "httpx==0.27.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]
